# self-studying

C++/BTree/: BTree.hpp  BTreeNode.hpp  BTree_.cpp  BiNode.hpp  simple_BTree_keys_value.cpp  simple_BTree_values.cpp
C++/DS-ElectionSystem/: CMakeLists.txt  Server.hpp  ZkManager.cpp  ZkSync.hpp
C++/DS-ElectionSystem/DSE/: CMakeLists.txt
C++/DS-ElectionSystem/DSE/app/: Server.cpp  Server.hpp  main.cpp
C++/DS-ElectionSystem/DSE/app/controllers/: VoteController.cpp  VoteController.hpp  VotesMap.cpp  VotesMap.hpp
C++/DS-ElectionSystem/DSE/app/models/: CommandElections.cpp  CommandElections.hpp  ControllerMessage.cpp  Distribution.cpp  Distribution.hpp  Vote.cpp  Vote.hpp  VotesCount.cpp  VotesCount.hpp  VotesCountKey.cpp  VotesCountKey.hpp
C++/DS-ElectionSystem/DSE/app/paxos/: AcceptAndAccepted.cpp  AcceptAndAccepted.hpp  InitAndSession.hpp  PaxosAction.hpp  PrepareAndPromise.cpp  PrepareAndPromise.hpp  SessionKey.hpp  SessionsMap.cpp  SessionsMap.hpp
C++/DS-ElectionSystem/DSE/app/utils/: ReadStates.cpp  ReadStates.hpp  ReadVoters.hpp
C++/DS-ElectionSystem/DSE/gRPCObjects/: FutureRemoteGreetingClient.cpp  FutureRemoteGreetingClient.hpp  GreetingClient.cpp  GreetingClient.hpp  GreetingServer.cpp  GreetingServer.hpp
C++/DS-ElectionSystem/DSE/gRPCObjects/interceptors/: ClientInterceptor.cpp  ClientInterceptor.hpp  ServerInterceptor.cpp  ServerInterceptor.hpp  SharedRestrictions.hpp
C++/DS-ElectionSystem/DSE/gRPCObjects/paxos/: FuturePaxosGreetingClient.cpp  FuturePaxosGreetingClient.hpp  GreetingPaxosClient.cpp  GreetingPaxosClient.hpp  GreetingPaxosServer.cpp  GreetingPaxosServer.hpp  OneTimeUseElement.hpp
C++/DS-ElectionSystem/DSE/models/: ControllerMessage.hpp  Vote.cpp  Vote.hpp  VotesCount.hpp
C++/DS-ElectionSystem/DSE/protos/: Paxos.grpc.pb.cc  Paxos.grpc.pb.h  Paxos.pb.cc  Paxos.pb.h  Vote.grpc.pb.cc  Vote.grpc.pb.h  Vote.pb.cc  Vote.pb.h
C++/DS-ElectionSystem/DSE/utils/: ReadStates.hpp
C++/DS-ElectionSystem/DSE/zk/: ZkConnector.cpp  ZkConnector.hpp  ZkManager.cpp  ZkManager.hpp  ZkSync.cpp  ZkSync.hpp
C++/DS-ElectionSystem/protos/: Paxos.proto  Vote.proto
C++/DS-ElectionSystem/test/: ConnectionTest.cpp
C++/DS-ElectionSystem/utils/: ReadVoters.cpp
C++/DS-ElectionSystem/zk/: ZkConnector.cpp  ZkManager.hpp  ZkSync.cpp
C++/desgin_pattern/: FactoryCreationPrototypeCloning.cpp  SimpleFactory.cpp
C++/desgin_pattern/Behavioral/: SimpleCommand.cpp  SimpleCommand2.cpp  SimpleIterator.cpp  SimpleMediator.cpp  SimpleMemento.cpp  SimpleObserver2.cpp  SimpleState.cpp  SimpleStrategy.cpp  SimpleTemplate.cpp  SimpleVisitor.cpp
C++/desgin_pattern/Creational/: SimpleAbstractFactory.cpp  SimpleAbstractFactory2.cpp  SimpleBuilder.cpp  SimpleBuilder2.cpp  SimpleFactory2.cpp  SimplePrototype.cpp  SimplePrototype2.cpp  SimpleSingelton.cpp
C++/desgin_pattern/Structural/: SimpleAdapter.cpp  SimpleAdapter2.cpp  SimpleBridge.cpp  SimpleComposite.cpp  SimpleComposite2Segregation.cpp  SimpleDecorator.cpp  SimpleDecorator2.cpp  SimpleDecoratorDynamic.cpp  SimpleDecoratorDynamic2.cpp  SimpleDecoratorStatic.cpp  SimpleFacade.cpp  SimpleFacade2.cpp  SimpleFlyweight.cpp  SimpleFlyweight2.cpp  SimpleFlyweight_shared_ptr.cpp  SimpleProxy.cpp  SimpleProxy2.cpp
C++/list/: CMakeLists.txt  list.hpp  list_tests.cpp  simple_test.cpp
C++/random_ex/: CMakeLists.txt  practice.cpp  practice1.cpp  practice10.cpp  practice11.cpp  practice12.cpp  practice13.cpp  practice2.cpp  practice3.cpp  practice4.cpp  practice5.cpp  practice6.cpp  practice7.cpp  practice8.cpp  practice9.cpp
C++/stack/: CMakeLists.txt  main.cpp  stack.hpp  stack_exceptions.hpp  stack_tests.cpp
C++/union-find/: CMakeLists.txt  main.cpp  union_find.cpp  union_find.hpp
C/leetcode & interviews/: BinSearchTreeItr.c  NQueen.c  bin_tree.c  malloc_free.c  merge_intervals.c  remove_list_elem.c  reverse_list.c  trap_water.c  word_ladder.c
C/leetcode&interviews/: BinSearchTreeBFS.c  find_sub.c  islands_num.c  malloc_free.c  malloc_free_lists.c  mergeKlists.c  reverse_k.c  simple_stack.c
C/leetcode&interviews/sockets/: client_socket.c  my_client_socket_local.c  my_client_socket_tcp_mt.c  my_client_socket_tcp_mt_select.c  my_client_socket_udp.c  my_google_client.c  my_server_socket_local.c  my_server_socket_tcp_mt.c  my_server_socket_tcp_no_mt_select.c  my_server_socket_udp.c  server_socket.c
C/list/: CMakeLists.txt  list.c  list.h  list_tests.c  simple_test.c
C/queue/: CMakeLists.txt  queue.c  queue.h  queue_tests.c  simple_test.c
C/stack/: CMakeLists.txt  Stack.c  Stack.h  simple_test.c  tests.c
C/union-find/: CMakeLists.txt  main.c  union_find.c  union_find.h
DataEngineering/introduction/: ch1.py  ch1a.py  ch1b.py  ch2.py  ch2a.py  ch2b.py  ch3.py  ch4.py  hybrid_parallel_processing_w_databseIO.py
DataEngineering/introduction/simple_project/: process_sales.py  sales_etl_dag.py
DataEngineering/pandas/: pandas_COW.ipynb  pandas_IO_tools.ipynb  pandas_advanced_indexing.ipynb  pandas_basic_functionality.ipynb  pandas_chart_vizualization.ipynb  pandas_cookbook.ipynb  pandas_groupby.ipynb  pandas_indexing_selecting.ipynb  pandas_intro_data_structures.ipynb  pandas_merge_join_concatenate_compare.ipynb  pandas_pyarrow_tut.ipynb  pandas_reshaping_pivot_tables.ipynb  pd_intro.ipynb
OpenCL/: sum-reduce-using-global.c  sum-reduce-using-local-not-optimal.c  sum-reduce-using-local-optimal.c  sum-reduce.c
SimpleChat/: package-lock.json  package.json  server.js
SimpleChat/client/: package-lock.json  package.json
SimpleChat/client/src/: App.js  ChatList.js  ChatWindow.js  CreateGroup.js  Login.js  Register.js  UserSearch.js
SimpleChat/middleware/: auth.js
